# sotto

./: LICENSE  README.md  pyproject.toml
packaging/homebrew/: README.md  sotto.rb
src/local_dictation/: __init__.py  app.py  cleaner.py  cli.py  config.py  hotkey.py  models.py  pipeline.py  recorder.py
src/sotto/: __init__.py  app.py  cli.py  config.py  hotkey.py  hud.py  injector.py  pipeline.py  recorder.py  transcriber.py  vad.py
