[project]
name = "local-dictation"
version = "0.1.0"
description = "Fully-local dictation for macOS: hold a hotkey, speak, get cleaned text at your cursor"
readme = "README.md"
authors = [
    { name = "Tomoaki Imai", email = "tomoima525@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mlx-whisper>=0.4.3",
    "mlx-lm>=0.31.3,<0.32",
    "rumps>=0.4.0",
    "pynput>=1.8.2",
    "sounddevice>=0.5.5",
    "numpy",
    "huggingface-hub",
    "tomli-w",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-libdispatch>=10.0",
]

[project.scripts]
local-dictation = "local_dictation.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_dictation"]
