[project]
name = "sotto"
version = "1.1.0"
description = "Fully-local dictation for macOS: hold a hotkey, speak, get cleaned text at your cursor"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Tomoaki Imai", email = "tomoima525@gmail.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Environment :: MacOS X",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mlx-whisper>=0.4.3",
    "mlx-lm>=0.31.3,<0.32",
    "rumps>=0.4.0",
    "sounddevice>=0.5.5",
    "numpy",
    "huggingface-hub",
    "tomli-w",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-libdispatch>=10.0",
    "pyobjc-framework-applicationservices>=10.0",
]

[project.urls]
Homepage = "https://github.com/tomoima525/sotto"
Repository = "https://github.com/tomoima525/sotto"
Issues = "https://github.com/tomoima525/sotto/issues"

[project.scripts]
sotto = "sotto.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sotto"]
